tests/machine/x/pascal/group_by_multi_join_sort.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_multi_join_sort.pas
group_by_multi_join_sort.pas(65,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crc09D74DF2"
group_by_multi_join_sort.pas(74,15) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crc09D74DF2"
group_by_multi_join_sort.pas(83,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crc09D74DF2"
group_by_multi_join_sort.pas(94,15) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crc09D74DF2"
group_by_multi_join_sort.pas(98,35) Error: Identifier not found "g"
group_by_multi_join_sort.pas(99,32) Error: Identifier not found "g"
group_by_multi_join_sort.pas(101,12) Error: Identifier not found "g"
group_by_multi_join_sort.pas(103,33) Error: Illegal qualifier
group_by_multi_join_sort.pas(103,59) Error: Illegal qualifier
group_by_multi_join_sort.pas(103,16) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_multi_join_sort.pas(101,12) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_multi_join_sort.pas(106,35) Error: Identifier not found "g"
group_by_multi_join_sort.pas(107,32) Error: Identifier not found "g"
group_by_multi_join_sort.pas(108,35) Error: Identifier not found "g"
group_by_multi_join_sort.pas(109,33) Error: Identifier not found "g"
group_by_multi_join_sort.pas(110,35) Error: Identifier not found "g"
group_by_multi_join_sort.pas(112,12) Error: Identifier not found "g"
group_by_multi_join_sort.pas(114,33) Error: Illegal qualifier
group_by_multi_join_sort.pas(114,59) Error: Illegal qualifier
group_by_multi_join_sort.pas(114,16) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_multi_join_sort.pas(112,12) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_multi_join_sort.pas(120,11) Error: Identifier not found "o"
group_by_multi_join_sort.pas(122,20) Error: Identifier not found "o"
group_by_multi_join_sort.pas(122,36) Error: identifier idents no member "c_custkey"
group_by_multi_join_sort.pas(123,15) Error: Identifier not found "l"
group_by_multi_join_sort.pas(125,24) Error: Identifier not found "l"
group_by_multi_join_sort.pas(125,39) Error: Identifier not found "o"
group_by_multi_join_sort.pas(126,19) Error: Identifier not found "n"
group_by_multi_join_sort.pas(128,28) Error: Identifier not found "n"
group_by_multi_join_sort.pas(128,46) Error: identifier idents no member "c_nationkey"
group_by_multi_join_sort.pas(129,30) Error: Identifier not found "o"
group_by_multi_join_sort.pas(129,64) Error: Identifier not found "o"
group_by_multi_join_sort.pas(129,96) Error: Identifier not found "l"
group_by_multi_join_sort.pas(131,49) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crc09D74DF2"
group_by_multi_join_sort.pas(131,43) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
group_by_multi_join_sort.pas(139,18) Error: Can't read or write variables of this type
group_by_multi_join_sort.pas(141) Fatal: There were 36 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
